--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "spherax-saas-playwright",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
-  "author": "",
+  "type": "module",
+  "scripts": {
+    "lint:check": "npx eslint . --cache",
+    "lint:fix": "npx eslint . --cache --fix"
+  },
+  "author": "Taras Svitlychnyi",
   "license": "ISC",
-  "description": "",
+  "description": "QA Automation Test Task for AQA challenge – SpheraX",
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.10.1"
+    "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
+    "typescript-eslint": "^8.46.4"
   }
 }
