--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "tsc:check": "npx tsc --noEmit",
     "lint:check": "npx eslint . --cache",
     "lint:fix": "npx eslint . --cache --fix"
   },
@@ -12,8 +13,10 @@
   "description": "QA Automation Test Task for AQA challenge – SpheraX",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
