Added UI Store tests and POM's

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,3 @@
 SPHERAX_BASE_URL=https://dev01.sphrx.xyz
 SPHERAX_API_URL=https://api.dev01.sphrx.xyz
+SPHERAX_STORE_URL=https://store.dev01.sphrx.xyz
